--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "dmk2014",
   "devDependencies": {
     "@types/node": "^8.0.7",
+    "@types/webfontloader": "^1.6.28",
     "expose-loader": "^0.7.3",
     "file-loader": "^0.11.2",
     "ts-loader": "^2.2.2",
@@ -16,6 +17,7 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "phaser-ce": "^2.8.1"
+    "phaser-ce": "^2.8.1",
+    "webfontloader": "^1.6.28"
   }
 }
