--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expose-loader": "^0.7.3",
     "file-loader": "^0.11.2",
     "ts-loader": "^2.3.4",
+    "tslint": "^5.7.0",
     "typescript": "^2.5.1",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
