--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "scripts": {
     "serve": "webpack-dev-server --config webpack.config.js",
-    "build:dev": "webpack --config webpack.config.js"
+    "build:dev": "webpack --config webpack.config.js",
+    "lint": "tslint --project tsconfig.json --force"
   },
   "author": "dmk2014",
   "devDependencies": {
