--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/node": "^8.0.26",
     "@types/webfontloader": "^1.6.29",
+    "clean-webpack-plugin": "^0.1.16",
     "expose-loader": "^0.7.3",
     "file-loader": "^0.11.2",
     "ts-loader": "^2.3.4",
