--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@types/webfontloader": "^1.6.29",
     "clean-webpack-plugin": "^0.1.19",
     "expose-loader": "^0.7.5",
-    "file-loader": "^0.11.2",
-    "ts-loader": "^2.3.7",
+    "file-loader": "^1.1.11",
+    "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.2",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
